Move nextHostedPage to hardcoded package
Because it can be removed when hardcoded content goes.

--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -1,4 +1,4 @@
-@import common.commercial.hosted.NextHostedPage
+@import common.commercial.hosted.hardcoded.NextHostedPage
 @(ctaText: Option[String], ctaLink: String, buttonText: Option[String], nextPages: List[NextHostedPage])
     <div class="hosted-gallery__oj js-hosted-gallery-oj">
         <div class="hosted-gallery__oj-cta hosted-tone-border">
