--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -501,16 +501,17 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
 .carousel-page {
     position: absolute;
     top: 0;
-    left:0;
+    left: 0;
     width: 100%;
     &:first-child {
         position: relative;
     }
 }
+
 .ab-test-variant1 {
     overflow: hidden;
     .prev-oj-item {
-        opacity: 0.5;
+        opacity: .5;
     }
 }
 
@@ -528,7 +529,7 @@ $dotSize: 8px;
     pointer-events: none;
     border: 1px solid;
     transition: background-color 750ms ease;
-    &:not(.highlighted){
+    &:not(.highlighted) {
         background: transparent;
     }
 }
