--- a/common/app/views/fragments/atoms/media.scala.html
+++ b/common/app/views/fragments/atoms/media.scala.html
@@ -1,14 +1,24 @@
 @import conf.Configuration.site.host
+@import views.support.RenderClasses
+
 @(media: model.content.MediaAtom)(implicit request: RequestHeader)
+
 @defining(media.assets.head.platform == "Youtube") { isYouTube =>
+    <div class="@RenderClasses(Map(
+        "u-responsive-ratio" -> true,
+        "u-responsive-ratio--hd" -> true
+    ))">
     @if(isYouTube) {
         @defining(if(!host.isEmpty) "&origin=" + host else "") { origin =>
-            <iframe id="youtube-@media.assets.head.id" width="420" height="315"
+            <iframe id="youtube-@media.assets.head.id" width="100%" height="100%"
             src="https://www.youtube.com/embed/@media.assets.head.id?modestbranding=1&enablejsapi=1&rel=0&showinfo=0@origin" frameborder="0"
             allowfullscreen="">
             </iframe>
+
         }
     } else {
-        @media.defaultHtml
+        @Html(media.defaultHtml)
     }
+    </div>
 }
+
