Load in the fonts to iframes

--- a/common/app/views/fragments/atoms/interactive.scala.html
+++ b/common/app/views/fragments/atoms/interactive.scala.html
@@ -13,6 +13,15 @@
         function resize() {
             window.frameElement.height = document.body.offsetHeight;
         }
+
+        var fonts = [].slice.apply(window.parent.document.styleSheets)
+            .filter(function (sheet) { return sheet.ownerNode.className.indexOf("webfont") > - 1; })
+            .map(function (sheet) { return sheet.ownerNode.textContent; })
+            .join(' ');
+        var css = document.createElement('style');
+        css.textContent = fonts;
+        document.head.appendChild(css);
+
         window.addEventListener('resize', resize);
         resize();
     </script>
