--- a/static/src/stylesheets/module/content/tones/_tone-media.scss
+++ b/static/src/stylesheets/module/content/tones/_tone-media.scss
@@ -63,10 +63,7 @@
     }
 
     .brandbadge__header,
-    .brandbadge__help,
-
-    .ad-slot--paid-for-badge__header,
-    .ad-slot--paid-for-badge__help {
+    .brandbadge__help {
         color: $neutral-6;
     }
 
@@ -88,7 +85,6 @@
     .byline,
     .content__dateline,
     .content__meta-container,
-    .ad-slot--paid-for-badge--article,
     .submeta hr,
     .commentcount,
     .meta__numbers,
