--- a/static/src/stylesheets/module/email/_iframe.scss
+++ b/static/src/stylesheets/module/email/_iframe.scss
@@ -52,7 +52,6 @@ body {
     .email-sub__form--footer,
     .email-sub__form--article,
     .email-sub__form--plain,
-    .email-sub__form--newsletters,
     .email-sub__form--plaindark {
         // Rounded inline input
         .email-sub__text-input {
@@ -82,19 +81,12 @@ body {
         }
     }
 
-    .email-sub__form--newsletters {
-        .email-sub__submit-input--solo {
-            width: 100%;
-        }
-    }
-
     .email-sub--article.email-sub__form--has-mark .email-sub__text-input {
         margin-bottom: $gs-baseline;
     }
 
     .email-sub__form--footer,
     .email-sub__form--plain,
-    .email-sub__form--newsletters,
     .email-sub__form--plaindark {
         .email-sub__submit-input {
             padding-left: $gs-gutter / 2;
@@ -106,7 +98,6 @@ body {
 @include mq(183px, 183px) {
     .email-sub__form--footer,
     .email-sub__form--plain,
-    .email-sub__form--newsletters,
     .email-sub__form--plaindark {
         padding-right: $gs-gutter / 2;
 
@@ -154,11 +145,20 @@ body {
 * IFRAME PLAIN MODS
 */
 .email-sub--plain,
-.email-sub--newsletters,
 .email-sub--plaindark
 {
     .email-sub__header,
     .email-sub__label,
+    .email-sub__small {
+        display: none;
+    }
+}
+
+/**
+* IFRAME NEWSLETTER MODS
+*/
+.email-sub--newsletters {
+    .email-sub__header,
     .email-sub__small {
         display: none;
     }
