--- a/common/app/views/fragments/exploreSeries.scala.html
+++ b/common/app/views/fragments/exploreSeries.scala.html
@@ -79,17 +79,18 @@
                   </div>
               </div>
           </div>
-
-          <div class="explore-series-standfirst">
-            <div class="gs-container">
-              <div class="content__main-column">
-                <div class="explore-series-byline-image hide-on-mobile">
-                  @fragments.meta.bylineImage(page.item.tags)
+          @if(!page.item.elements.hasMainVideo){
+            <div class="explore-series-standfirst">
+              <div class="gs-container">
+                <div class="content__main-column">
+                  <div class="explore-series-byline-image hide-on-mobile">
+                    @fragments.meta.bylineImage(page.item.tags)
+                  </div>
+                  @fragments.standfirst(page.item)
                 </div>
-                @fragments.standfirst(page.item)
               </div>
             </div>
-          </div>
+          }
       </div>
 
     </div>
