Edit model imports for all commercial views.
When building the projects, certain imports are always executed:
import views.support._
import models._

This can lead to package conflicts and namespace oddities. As a
result, the commercial views now specific explicitly which model
is being used in the view.

--- a/commercial/app/views/books/bookCard.scala.html
+++ b/commercial/app/views/books/bookCard.scala.html
@@ -1,4 +1,5 @@
-@(book: model.commercial.Book,
+@import _root_.commercial.model.merchandise.Book
+@(book: Book,
   clickMacro: Option[String],
   optClassNames: Option[Seq[String]] = None)
 
