--- a/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
+++ b/commercial/app/views/masterclasses/masterclassLargeCard.scala.html
@@ -1,4 +1,6 @@
-@(event: model.commercial.Masterclass,
+@import  _root_.commercial.model.merchandise.Masterclass
+
+@(event: Masterclass,
   clickMacro: Option[String],
   optAdvertClassNames: Option[Seq[String]] = None)
 
