--- a/commercial/app/views/travel/travelBlended.scala.html
+++ b/commercial/app/views/travel/travelBlended.scala.html
@@ -1,4 +1,6 @@
-@(offer: model.commercial.TravelOffer, clickMacro: Option[String])
+@import  _root_.commercial.model.merchandise.TravelOffer
+
+@(offer: TravelOffer, clickMacro: Option[String])
 
 @import conf.Configuration
 
