--- a/applications/app/views/fragments/crosswords/crosswordFooter.scala.html
+++ b/applications/app/views/fragments/crosswords/crosswordFooter.scala.html
@@ -9,7 +9,7 @@
 
     @fragments.onwardPlaceholder(isAdvertisementFeature = false)
 
-    @if(!crosswordPage.content.content.shouldHideAdverts && crosswordPage.content.commercial.needsHighMerchandisingSlot(Edition(request))) {
+    @if(!crosswordPage.content.content.shouldHideAdverts) {
         <div class="fc-container fc-container--commercial">
             @fragments.commercial.commercialComponentHigh(false)
         </div>
