Update all references to commercial views to the new path.

--- a/commercial/app/views/jobs/jobs.scala.html
+++ b/commercial/app/views/jobs/jobs.scala.html
@@ -6,7 +6,7 @@
   omnitureId: Option[String],
   clickMacro: Option[String])(implicit request: RequestHeader)
 
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.jobs.jobCard
 
 @containerWrapper(Seq("legacy", "jobs", "tone-jobs"),
