--- a/commercial/app/views/contentapi/items.scala.html
+++ b/commercial/app/views/contentapi/items.scala.html
@@ -2,8 +2,8 @@
 @import common.commercial.CardContent
 @import common.LinkTo
 @import fragments.commercial.paidForMeta
-@import views.html.commercial.cards.itemCard
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.cards.itemCard
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.fragments.inlineSvg
 @import views.support.commercial.TrackingCodeBuilder.mkCapiCardTrackingCode
 @import cards.{Half, Third, Standard}
