--- a/commercial/app/views/soulmates/soulmates.scala.html
+++ b/commercial/app/views/soulmates/soulmates.scala.html
@@ -5,7 +5,7 @@
   clickMacro: Option[String])(implicit request: RequestHeader)
 
 @import conf.Configuration
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.soulmates.{soulmateCard, soulmateForm}
 
 @containerWrapper(Seq("legacy", "soulmates", "tone-soulmates"),
