--- a/commercial/app/views/travel/travel.scala.html
+++ b/commercial/app/views/travel/travel.scala.html
@@ -5,7 +5,7 @@
   clickMacro: Option[String],
   isProminent: Boolean = false)(implicit request: RequestHeader)
 
-@import views.html.commercial.containerWrapper
+@import views.html.fragments.commercial.containerWrapper
 @import views.html.travel.travelCard
 
 @containerWrapper(Seq("legacy", "travel", "tone-travel"),
