--- a/common/app/views/fragments/commercial/containers/fixedMediumFastXI.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedMediumFastXI.scala.html
@@ -4,18 +4,18 @@
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
 <div class="adverts__row adverts__row--2x1x1">
-    @containerModel.content.initialCards.take(1).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.take(1).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             cardType = cards.Half,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
-    @containerModel.content.initialCards.slice(1, 2).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(1, 2).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
-    @containerModel.content.initialCards.slice(2, 3).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(2, 3).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optClassNames = Some(Seq("hide-until-tablet")),
@@ -24,28 +24,28 @@
 </div>
 <div class="adverts__row hide-until-tablet">
     <div class="adverts__column">
-        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.commercial.cards.itemSmallCard(
+        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.fragments.commercial.cards.itemSmallCard(
                                 card,
                                 omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                                 optAdvertClassNames = Some(Seq("paidfor")),
                                 useCardBranding = !containerModel.isSingleSponsorContainer))
     </div>
     <div class="adverts__column">
-        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.commercial.cards.itemSmallCard(
+        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.fragments.commercial.cards.itemSmallCard(
                                 card,
                                 omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                                 optAdvertClassNames = Some(Seq("paidfor")),
                                 useCardBranding = !containerModel.isSingleSponsorContainer))
     </div>
     <div class="adverts__column">
-        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.commercial.cards.itemSmallCard(
+        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.fragments.commercial.cards.itemSmallCard(
                                 card,
                                 omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                                 optAdvertClassNames = Some(Seq("paidfor")),
                                 useCardBranding = !containerModel.isSingleSponsorContainer))
     </div>
     <div class="adverts__column">
-        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.commercial.cards.itemSmallCard(
+        @containerModel.content.initialCards.slice(3, 5).map(card => views.html.fragments.commercial.cards.itemSmallCard(
                                 card,
                                 omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                                 optAdvertClassNames = Some(Seq("paidfor")),
