--- a/common/app/views/fragments/commercial/containers/fixedMediumSlowVII.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedMediumSlowVII.scala.html
@@ -4,18 +4,18 @@
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
 <div class="adverts__row adverts__row--2x1x1">
-    @containerModel.content.initialCards.take(1).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.take(1).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             cardType = cards.Half,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel,card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
-    @containerModel.content.initialCards.slice(1, 2).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(1, 2).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel,card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
-    @containerModel.content.initialCards.slice(2, 3).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(2, 3).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
@@ -23,7 +23,7 @@
                             useCardBranding = !containerModel.isSingleSponsorContainer))
 </div>
 <div class="adverts__row hide-until-tablet">
-    @containerModel.content.initialCards.slice(3, 7).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(3, 7).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
