--- a/common/app/views/fragments/commercial/containers/fixedSmallFastVIII.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedSmallFastVIII.scala.html
@@ -4,13 +4,13 @@
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
 <div class="adverts__row adverts__row--1x1x2">
-    @containerModel.content.initialCards.take(2).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.take(2).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
     <div class="adverts__column adverts__2cols">
-        @containerModel.content.initialCards.slice(2, 8).map(card => views.html.commercial.cards.itemSmallCard(
+        @containerModel.content.initialCards.slice(2, 8).map(card => views.html.fragments.commercial.cards.itemSmallCard(
                                 card,
                                 omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                                 optAdvertClassNames = Some(Seq("paidfor")),
