--- a/common/app/views/fragments/commercial/containers/fixedSmallSlowIV.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedSmallSlowIV.scala.html
@@ -4,12 +4,12 @@
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
 <div class="adverts__row">
-    @containerModel.content.initialCards.take(2).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.take(2).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
-    @containerModel.content.initialCards.slice(2, 4).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(2, 4).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             optClassNames = Some(Seq("hide-until-tablet")),
                             optAdvertClassNames = Some(Seq("paidfor")),
