--- a/common/app/views/fragments/commercial/containers/fixedSmallSlowVHalf.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedSmallSlowVHalf.scala.html
@@ -5,13 +5,13 @@
 
 <div class="adverts__row">
     <div class="adverts__column">
-        @containerModel.content.initialCards.take(2).map(card => views.html.commercial.cards.itemLargeCard(
+        @containerModel.content.initialCards.take(2).map(card => views.html.fragments.commercial.cards.itemLargeCard(
             card,
             optAdvertClassNames = Some(Seq("inverse", "thumbnail", "paidfor")),
             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
             useCardBranding = !containerModel.isSingleSponsorContainer
         ))
-        @containerModel.content.initialCards.slice(2, 4).map(card => views.html.commercial.cards.itemLargeCard(
+        @containerModel.content.initialCards.slice(2, 4).map(card => views.html.fragments.commercial.cards.itemLargeCard(
             card,
             optAdvertClassNames = Some(Seq("inverse", "thumbnail", "paidfor")),
             optClassNames = Some(Seq("hide-until-tablet")),
@@ -19,7 +19,7 @@
             useCardBranding = !containerModel.isSingleSponsorContainer
         ))
     </div>
-    @containerModel.content.initialCards.slice(4, 5).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.slice(4, 5).map(card => views.html.fragments.commercial.cards.itemCard(
         card,
         cardType = cards.Half,
         optClassNames = Some(Seq("hide-until-tablet")),
