--- a/common/app/views/fragments/commercial/containers/fixedSmallSlowVThird.scala.html
+++ b/common/app/views/fragments/commercial/containers/fixedSmallSlowVThird.scala.html
@@ -4,13 +4,13 @@
   containerModel: common.commercial.ContainerModel)(implicit request: RequestHeader)
 
 <div class="adverts__row adverts__row--1x1x2">
-    @containerModel.content.initialCards.take(2).map(card => views.html.commercial.cards.itemCard(
+    @containerModel.content.initialCards.take(2).map(card => views.html.fragments.commercial.cards.itemCard(
                             card,
                             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
                             optAdvertClassNames = Some(Seq("paidfor")),
                             useCardBranding = !containerModel.isSingleSponsorContainer))
     <div class="adverts__column hide-until-tablet">
-        @containerModel.content.initialCards.slice(2, 5).map(card => views.html.commercial.cards.itemLargeCard(
+        @containerModel.content.initialCards.slice(2, 5).map(card => views.html.fragments.commercial.cards.itemLargeCard(
             card,
             optAdvertClassNames = Some(Seq("inverse", "thumbnail", "paidfor")),
             omnitureId = mkInteractionTrackingCode(frontId, containerIndex, containerModel, card),
