Remove root prefix on commercial models in commercial views.

--- a/commercial/app/views/books/booksBlended.scala.html
+++ b/commercial/app/views/books/booksBlended.scala.html
@@ -1,4 +1,4 @@
-@import _root_.commercial.model.merchandise.Book
+@import commercial.model.merchandise.Book
 
 @(book: Book, clickMacro: Option[String])
 
