--- a/commercial/app/views/jobs/jobCard.scala.html
+++ b/commercial/app/views/jobs/jobCard.scala.html
@@ -1,4 +1,4 @@
-@import _root_.commercial.model.merchandise.Job
+@import commercial.model.merchandise.Job
 
 @(job: Job,
   clickMacro: Option[String],
