--- a/commercial/app/views/jobs/jobs.scala.html
+++ b/commercial/app/views/jobs/jobs.scala.html
@@ -1,5 +1,5 @@
-@import _root_.commercial.model.merchandise.jobs.JobSector
-@import _root_.commercial.model.merchandise.Job
+@import commercial.model.merchandise.jobs.JobSector
+@import commercial.model.merchandise.Job
 
 @(jobs: Seq[Job],
   jobSectors: Seq[JobSector],
