--- a/commercial/app/views/liveevents/liveEvent.scala.html
+++ b/commercial/app/views/liveevents/liveEvent.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.LiveEvent
+@import  commercial.model.merchandise.LiveEvent
 
 @(event: LiveEvent, omnitureId: Option[String], clickMacro: Option[String])(implicit request: RequestHeader)
 @import views.support.{ImgSrc, Item300}
