--- a/commercial/app/views/masterclasses/masterclasses.scala.html
+++ b/commercial/app/views/masterclasses/masterclasses.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.Masterclass
+@import  commercial.model.merchandise.Masterclass
 
 @(events: Seq[Masterclass],
   omnitureId: Option[String],
