--- a/commercial/app/views/soulmates/soulmatesBlended.scala.html
+++ b/commercial/app/views/soulmates/soulmatesBlended.scala.html
@@ -1,4 +1,4 @@
-@import _root_.commercial.model.merchandise.Member
+@import commercial.model.merchandise.Member
 
 @(members: Seq[Member],
   clickMacro: Option[String])
