--- a/commercial/app/views/travel/travel.scala.html
+++ b/commercial/app/views/travel/travel.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.TravelOffer
+@import  commercial.model.merchandise.TravelOffer
 
 @(offers: Seq[TravelOffer],
   omnitureId: Option[String],
