--- a/commercial/app/views/travel/travelBlended.scala.html
+++ b/commercial/app/views/travel/travelBlended.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.TravelOffer
+@import  commercial.model.merchandise.TravelOffer
 
 @(offer: TravelOffer, clickMacro: Option[String])
 
