--- a/commercial/app/views/books/book.scala.html
+++ b/commercial/app/views/books/book.scala.html
@@ -1,4 +1,4 @@
-@import _root_.commercial.model.merchandise.Book
+@import commercial.model.merchandise.Book
 @(book: Book, omnitureId: Option[String], clickMacro: Option[String])(implicit request: RequestHeader)
 
 <aside class="adverts adverts--manual adverts--legacy-inline adverts--tone-books advert--book" data-link-name="merchandising | book | @omnitureId">
