--- a/commercial/app/views/books/booksStandard.scala.html
+++ b/commercial/app/views/books/booksStandard.scala.html
@@ -1,4 +1,4 @@
-@import _root_.commercial.model.merchandise.Book
+@import commercial.model.merchandise.Book
 
 @(books: Seq[Book],
   omnitureId: Option[String],
