--- a/commercial/app/views/masterclasses/masterclassesBlended.scala.html
+++ b/commercial/app/views/masterclasses/masterclassesBlended.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.Masterclass
+@import  commercial.model.merchandise.Masterclass
 
 @(event: Masterclass, clickMacro: Option[String])
 
