--- a/commercial/app/views/soulmates/soulmateCard.scala.html
+++ b/commercial/app/views/soulmates/soulmateCard.scala.html
@@ -1,4 +1,4 @@
-@import  _root_.commercial.model.merchandise.Member
+@import  commercial.model.merchandise.Member
 
 @(soulmate: Member,
   clickMacro: Option[String],
