--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -5,7 +5,10 @@
 @{
     model match {
         case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, false, Nil)
-        case media: MediaAtom => views.html.fragments.atoms.media(media)
+        case media: MediaAtom => media match {
+            case youtube if (media.assets.head.platform == "Youtube") => views.html.fragments.atoms.youtube(media)
+            case _ => views.html.fragments.atoms.media(media)
+        }
         case _ =>
     }
 }
