--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -1,9 +1,14 @@
 @(model: _root_.model.content.Atom)(implicit request: RequestHeader)
 @import _root_.model.content.Quiz
+@import _root_.model.content.MediaAtom
 
 @{
     model match {
-        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, false, Nil)
+        case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
+        case media: MediaAtom => media match {
+            case youtube if media.assets.head.platform == "Youtube" => views.html.fragments.atoms.youtube(media)
+            case _ => views.html.fragments.atoms.media(media)
+        }
         case _ =>
     }
 }
