--- a/common/app/views/fragments/email/signup/emailSignUp.scala.html
+++ b/common/app/views/fragments/email/signup/emailSignUp.scala.html
@@ -11,8 +11,11 @@
 
 @listIdTones = @{ Map[Int, String] (
     theBestOfOpinion -> "comment",
+    bestOfOpinionAUS -> "comment",
+    bestOfOpinionUS -> "comment",
     theFiver -> "feature",
     mediaBriefing -> "media",
+    weekendReading -> "feature",
     theLongRead -> "feature",
     theBreakdown -> "feature",
     theSpin -> "feature",
@@ -26,7 +29,7 @@
 @inputId = @{ componentClass + "-email-sub-input" }
 
 @wrapperClass = @{ "email-sub js-email-sub" + " email-sub--" + componentClass + " js-email-sub--" + componentClass }
-@wrapperToneClass = @{ if (componentClass == "article") "email-sub--tone-" + listIdTones.getOrElse(listId, "news") }
+@wrapperToneClass = @{ if (componentClass == "article" || componentClass == "newsletters") "email-sub--tone-" + listIdTones.getOrElse(listId, "news") }
 @formClass = @{ "email-sub__form js-email-sub__form" + " email-sub__form--" + componentClass }
 
 <div class="@wrapperClass @wrapperToneClass">
